src/assets/stylesheets/global.scss
body {
    font-size: 14px;
    font-family: Roboto, Arial
}

.v--modal-box.v--modal {
    padding: 15px 30px;
    h1 {
        text-align: center;
        color: #515151;
        text-transform: uppercase;
    }
    @media screen and (max-width: 600px) {
        max-width: 90% !important;
        left: 5% !important;
    }
}

.loginModal {
    .v--modal {
        max-width: 500px;
    }
}

.flashContainer {
    font-weight: 500;
    font-size: 14px;
    padding: 15px !important;
}

main {
    margin-top: 20px;
}

.section {
    padding: 30px 0px;
}

.objectiveModal {
    .v--modal {
        height: initial !important;
    }
    .close{
        position: absolute;
        top: 6%;
        right: 5%;
        cursor: pointer;
    }
}

.jsonHighlight {
    .string {
        color: green;
    }
    .number {
        color: darkorange;
    }
    .boolean {
        color: blue;
    }
    .null {
        color: magenta;
    }
    .key {
        color: red;
    }
}

.sessionModal .v--modal {
    height: 80vh !important;
    top: 10vh !important;
    width: 800px !important;
    max-width: 100%;
    padding: 0px;
    .sessionContent {
        overflow: auto;
        flex: 1 1 auto;
        padding: 0px 15px 30px 15px;
    }
    .modalBody {
        height: 80vh !important;
        display: flex;
        flex-direction: column;
    }

    .tagDropdown {
        width: fit-content;
        position: absolute;
        top: 15px;
        left: 635px;
    }
}

.v--modal-overlay {
    overflow: auto !important;
}

abbr {
    color: #f44336;
}

.vue-tags-input {
    max-width: initial !important;
    width: 100%;
  }

